syntax = "proto3";

package dousheng.interaction.comment;

//生成Go文件的包目录路径
option go_package="github.com/Go-To-Byte/DouSheng/interaction_service/apps/comment";

import "github.com/Go-To-Byte/DouSheng/user_center/apps/user/pb/user.proto";

service Service {
  //发表评论
  rpc CommentAction(CommentActionRequest) returns (CommentActionResponse);
  //获取评论
  rpc GetCommentList(GetCommentListRequest) returns (GetCommentListResponse);

}

//评论实体
message Comment{
  //  评论id
  int64 id = 1;
  user.User user = 2;
  string content = 3;
  //评论日期 格式 mm-dd
  string create_date = 4;
}

message CommentPo{
  //  评论id
  int64 id = 1;
  int64 user_id = 2;
  int64 video_id = 3;
  string content = 4;
  //评论日期 格式 mm-dd
  string create_date = 5;
}

//发表评论请求体
message CommentActionRequest{
  //用户鉴权token
  string token = 1;
  //视频id
  int64 video_id = 2;
  //1-发布评论 2-删除评论
  int64 action_type = 3;
  //用户填写的评论内容，在action_type=1时候使用
  string comment_text = 4;
  int64 comment_id = 5;
}

//获取评论列表请求体
message GetCommentListRequest{
  string token = 1;
  int64 video_id = 2;
}

//评论操作响应体
message CommentActionResponse{
  Comment comment = 3;
}

//获取评论（列表）响应体
message GetCommentListResponse{
  repeated Comment comment_list = 3;
}